# OPENUBMC_RAG

./: -  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  简历.md
.claude/: settings.local.json
config/: default_config.yaml  p3_dashscope_config.yaml
docs/: interview.md  optimization-plan.md
docs/design/: anti-hallucination.md  architecture.md  challenges.md  evaluation-v2-changelog.md  evaluation-v3-changelog.md  evaluation.md  graph-rag-research.md  iteration-changelog.md  react-agent.md
docs/evaluation/: cross-encoder-benchmark.md
docs/reviews/: t_1b7bda68.md  t_26e224bb.md  t_486cae5d.md  t_66854a9e.md  t_6ac5568e.md  t_b2ec6bee.md  t_f6e36709.md
evaluation/: __init__.py  eval_cmd.py  report.py
evaluation/agent/: __init__.py  evaluator.py  judge.py  prompts.py
evaluation/datasets/: __init__.py  loader.py  regression_v1.yaml  schema.py
evaluation/retrieval/: __init__.py  evaluator.py  metrics.py  runner.py
results/: baseline_restored.json  iter10_agent_with_docs.json  iter10_with_docs.json  p0_baseline.json  p0_ce_final.json  p0_cross_encoder.json
scripts/: scan_bm25_params.py
specs/: graph-rag-spec.md  optimization-plan-iter7.md  se-final-review.md  se-iter6-postmortem.md  se-p0-postmortem.md  se-review-reranker.md  se-review-rrf.md
tests/: conftest.py
tests/test_chat/: test_prompt_library.py  test_tools.py
tests/test_evaluation/: test_retrieval_eval.py
tests/test_indexing/: test_bm25.py
tests/test_parsers/: test_c_cpp_parser.py  test_json_parser.py  test_lua_parser.py
ubmc_rag/: __init__.py  __main__.py
(+51 files in other folders)
