[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubmc-rag"
version = "0.1.0"
description = "Code RAG system for openUBMC micro-component architecture"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "gitpython>=3.1.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "mcp[cli]>=1.0.0",
    "pathspec>=0.12.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[project.scripts]
ubmc-rag = "ubmc_rag.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
